# tinywad

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: dir.rs  error.rs  header.rs  lib.rs  lump.rs  main.rs  output.rs  wad.rs
src/lumps/: doom_image.rs  flat.rs  mod.rs  palette.rs  patch.rs  unknown.rs
src/lumps/music/: lump.rs  mid.rs  mod.rs  mus.rs
src/models/: convert.rs  lump.rs  mod.rs  operation.rs
src/properties/: color.rs  file.rs  mod.rs
