[package]
name = "tinywad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
structopt = "0.3.26"
regex = "1"
image = "0.24.3"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
dyn-clone = "1.0"
